--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <title>Access Control Program</title>
     <script>
-        let role = prompt("Enter your role (Admin/Manager/Employee/Intern):").toLowerCase();
-        let experience = parseFloat(prompt("Enter your years of experience:"));
+        let role = prompt("Enter your role (Admin/Manager/Employee/Intern):").toLowerCase();//.tolowercase means is mein user jis case mein letter likhe ga yani capital samll woh sub small mein hi ayein ge
+        let experience = parseFloat(prompt("Enter your years of experience:"));//parseFloat() float ka mutlub he floating points is ka istamla basically is liyeh ka gayah he take jo bhi number ayeh as astring nayein bulke as a number aayein
         let department = prompt("Enter your department (IT/HR/Others):").toLowerCase();
 
     
@@ -29,4 +29,5 @@
     </center>
 </body>
 </html>
+
 
