--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 
 <head>
     <title>Access Control Program</title>
+    <link href="https://db.onlinewebfonts.com/c/1c1fac465622658df6b03916baa4d22d?family=Chettalbury" rel="stylesheet">
+
+    <style>
+        @font-face {
+  font-family: 'Chettalbury';
+  src: url('https://db.onlinewebfonts.com/c/1c1fac465622658df6b03916baa4d22d?family=Chettalbury') format('truetype');
+  font-style: italic;
+  font-weight: normal;
+}
+    </style>
     <script>
         let role = prompt("Enter your role (Admin/Manager/Employee/Intern):").toLowerCase();//.tolowercase means is mein user jis case mein letter likhe ga yani capital samll woh sub small mein hi ayein ge
         let experience = parseFloat(prompt("Enter your years of experience:"));//parseFloat() float ka mutlub he floating points is ka istamla basically is liyeh ka gayah he take jo bhi number ayeh as astring nayein bulke as a number aayein
@@ -29,5 +39,6 @@
     </center>
 </body>
 </html>
+
 
 
