--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
     <link href="https://db.onlinewebfonts.com/c/1c1fac465622658df6b03916baa4d22d?family=Chettalbury" rel="stylesheet">
 
     <style>
-        @font-face {
-  font-family: 'Chettalbury';
-  src: url('https://db.onlinewebfonts.com/c/1c1fac465622658df6b03916baa4d22d?family=Chettalbury') format('truetype');
-  font-style: italic;
-  font-weight: normal;
-}
+  
     </style>
     <script>
         let role = prompt("Enter your role (Admin/Manager/Employee/Intern):").toLowerCase();//.tolowercase means is mein user jis case mein letter likhe ga yani capital samll woh sub small mein hi ayein ge
@@ -34,11 +29,12 @@
     </script>
 </head>
 <body><center>
-    <h1 style="color:blue; font-family:Chettalbury Italic; font-weight: bolder; font-size: 100px; line-height: 120px;">Welcome to the Access Control Page Sir</h1>
+    <h1 style="color:blue; font-family: 'Chettalbury', cursive; font-weight: bolder; font-size: 100px; line-height: 120px;">Welcome to the Access Control Page Sir</h1>
     <p style="color:brown; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 30px; font-weight: 400;">If you see this message, you have been <em><strong>granted access</strong></em>.</p>
     </center>
 </body>
 </html>
+
 
 
 
