--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link href="https://db.onlinewebfonts.com/c/1c1fac465622658df6b03916baa4d22d?family=Chettalbury" rel="stylesheet">
 
     <style>
-  
+   body {
+      font-family: 'Chettalbury', cursive;
+    }
     </style>
     <script>
         let role = prompt("Enter your role (Admin/Manager/Employee/Intern):").toLowerCase();//.tolowercase means is mein user jis case mein letter likhe ga yani capital samll woh sub small mein hi ayein ge
@@ -34,6 +36,7 @@
     </center>
 </body>
 </html>
+
 
 
 
